test/corpus/select.txt
================================================================================
Select 1
================================================================================

SELECT 1;

--------------------------------------------------------------------------------

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (literal)))))

================================================================================
Schema.Table.*
================================================================================

SELECT my_schema.my_table.* FROM my_table;

--------------------------------------------------------------------------------

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (object_reference
     schema: (identifier)
     name: (identifier))
    (all_fields)))
  (from
   (keyword_from)
   (relation
    (object_reference
     name: (identifier))))))

================================================================================
Table.*
================================================================================

SELECT my_table.* FROM my_table;

--------------------------------------------------------------------------------

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (object_reference
     name: (identifier))
    (all_fields)))
   (from
    (keyword_from)
    (relation
     (object_reference
      name: (identifier))))))

================================================================================
Simple select with fields
================================================================================

SELECT id, name FROM my_table;

--------------------------------------------------------------------------------

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     name: (identifier))
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (relation
    (object_reference
     name: (identifier))))))

================================================================================
Select with quoted column
================================================================================

SELECT tab."COL" FROM tab;

--------------------------------------------------------------------------------

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (object_reference
     name: (identifier))
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (relation
    (object_reference
     name: (identifier))))))

================================================================================
Simple select with schema
================================================================================

SELECT * FROM my_schema.my_table;

--------------------------------------------------------------------------------

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (all_fields)))
  (from
   (keyword_from)
   (relation
    (object_reference
     schema: (identifier)
     name: (identifier))))))

================================================================================
Simple select with schema and fully-pathed fields
================================================================================

SELECT
  my_schema.my_table.my_field
FROM
  my_schema.my_table;

--------------------------------------------------------------------------------

(program
 (statement
  (select
   (keyword_select)
   (select_expression
    (object_reference
     schema: (identifier)
     name: (identifier))
    (field
     name: (identifier))))
  (from
   (keyword_from)
   (relation
    (object_reference
     schema: (identifier)
     name: (identifier))))))
